# Python

./: .gitignore  changelog.md  changes.md  extime.py  license  pyproject.toml  readme.md  style.md  toml.py  workflow.py
.github/workflows/: publish.yml
EDP/RM/: EDP-RM-001.md
tests/: conftest.py  test_colors.py  test_cstruct.py  test_files.py  test_log.py  test_table.py  test_xstring.py  test_xtime.py
xaeian/: __init__.py  __main__.py  cbash.py  cmd.py  colors.py  crc.py  cstruct.py  dsp.py  files.py  files_async.py  log.py  plot.py  readme.md  serial_port.py  sftp.py  table.py  xstring.py  xtime.py
xaeian/cli/: __init__.py  _args.py  dupes.py  fonts.py  readme.md  tree.py  wifi.py
xaeian/db/: __init__.py  abstract.py  abstract_async.py  kv.py  kv_async.py  kv_common.py  mysql.py  mysql_async.py  postgres.py  postgres_async.py  readme.md  sqlite.py  sqlite_async.py  utils.py
xaeian/eda/: __init__.py  ee.py  fp.md  fp.py  kicad.py  kicad_clean.py  kicad_fp.py  readme.md  spice.py  sym.md  sym.py
xaeian/files/: __init__.py  bound.py  config.py  csv.py  dir.py  file.py  ini.py  json.py  path.py  readme.md  yaml.py
xaeian/media/: __init__.py  ico.py  img.py  meta.py  min.py  pdf.py  readme.md  utils.py
xaeian/mf/: __init__.py  ico.py  img.py  meta.py  min.py  pdf.py  readme.md  utils.py
xaeian/net/: __init__.py  ftp.py  readme.md  sftp.py
xaeian/pdf/: __init__.py  basic.py  constants.py  core.py  fonts.py  graphics.py  layout.py  readme.md  structure.py  styles.py  tables.py  text.py  utils.py
xaeian/serial/: __init__.py  port.py  readme.md  rec-app.py  rec.py  sh.py
