[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xaeian"
version = "0.6.1"
description = "Python utilities for files, strings, time, serial, structs, media, electronics, plotting, and database and more..."
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Xaeian"}]
keywords = ["utilities", "files", "database", "serial", "crc", "struct", "media", "kicad", "plot", "matplotlib", "ngspice", "spice", "dsp", "signal", "filter", "fft", "vibration", "ftp", "sftp"]
dependencies = []

[project.optional-dependencies]
db = ["psycopg2-binary", "pymysql"]
db-async = ["aiomysql", "aiosqlite", "asyncpg"]
dsp = ["numpy", "scipy"]
eda = ["PyMuPDF", "pypdf", "sexpdata"]
media = ["Pillow", "PyMuPDF", "pypdf"]
plot = ["matplotlib", "numpy"]
serial = ["pyserial"]
time = ["pytz", "tzlocal"]
all = ["Pillow", "PyMuPDF", "aiomysql", "aiosqlite", "asyncpg", "matplotlib", "numpy", "psycopg2-binary", "pymysql", "pypdf", "pyserial", "pytz", "scipy", "sexpdata", "tzlocal"]

[project.scripts]
xn = "xaeian.__main__:main"

[project.urls]
Repository = "https://github.com/Xaeian/Python"

[tool.setuptools.packages.find]
include = ["xaeian*"]
